--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<script src="touchpoint.js"></script>
 		<script>
 			(function () {
+				TouchPoint.init();
 				window.addEventListener("click", TouchPoint.create, false); 
 			})();
 		</script>
