Update styles in example

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 				padding: 0; margin: 0 auto;
 				width: 100%; height: auto;
 				background-color: #000;
+				color: #FFF;
 			}
 		</style>
 	</head>
@@ -14,6 +15,7 @@
 		<script src="touchpoint.js"></script>
 		<script>
 			(function () {
+				TouchPoint.color = 'red';
 				TouchPoint.init(window); 
 			})();
 		</script>
