Fix link issue in basic demo

--- a/basic-demo.html
+++ b/basic-demo.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		
-		<script src="dist/touchpoint.js"></script>
+		<script src="touchpoint.js"></script>
 		<script>
 			(function () {
 				TouchPoint.init(window); 
