Setup build environment to compile es6 code.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		      <div class="bottom-bar"></div>
 		  </div>
 		</div>
-		<script src="dist/touchpoint.min.js"></script>
+		<script src="dist/touchpoint-es5.js"></script>
 		<script>
 			(function () {
 			  TouchPoint.color = 'red';
