Add ES6 polyfill

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 		      <div class="bottom-bar"></div>
 		  </div>
 		</div>
+		<script src="node_modules/babel-polyfill/dist/polyfill.min.js"></script>
 		<script src="dist/touchpoint-es5.js"></script>
 		<script>
 			(function () {
