Clean up build settings

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		  </div>
 		</div>
 		<script src="node_modules/babel-polyfill/dist/polyfill.min.js"></script>
-		<script src="dist/touchpoint-es5.js"></script>
+		<script src="dist/touchpoint.js"></script>
 		<script>
 			(function () {
 			  TouchPoint.color = 'red';
