Clean-up and es6-ify init function.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 		<div class="container">
 		  <section id="iphone-x" class="silver">
 		    <div class="wrap">
-		      <h1 class="new">iPhone X</h1>
 		      <div class="marvel-device iphone-x">
 		        <div class="notch">
 		          <div class="camera"></div>
@@ -50,7 +49,7 @@
 		<script>
 			(function () {
 			  TouchPoint.color = 'red';
-			  TouchPoint.init(window); 
+			  TouchPoint.init(); 
 			})();
 		</script>
 		<script>
